<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:background="#000000">
	<TextView
        android:id="@+id/carhudTitle"
        android:text="@string/app_name"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
       	android:textColor="#FFFFFF"
       	android:background="#33B5E5"
    />
    	<TextView
        android:id="@+id/senderText"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
       	android:textColor="#FFFFFF"
       	android:paddingTop="20sp"
    />
    	<TextView
        android:id="@+id/errorText"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
       	android:textColor="#FFFFFF"
       	android:paddingBottom="20sp"
    />
    		
	<LinearLayout 
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center">
		
	    <Button android:id="@+id/stop_button"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/stop_service" 
	            android:background="#A6180A"
	            android:gravity="center"
	            android:textSize="20sp"
	            android:padding="10sp"
				android:layout_marginRight="20sp"	            
                android:textColor="#FFFFFF" />
	    
		<Button android:id="@+id/start_button"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/start_service"
	            android:background="#00F700"
	            android:gravity="center"
	            android:padding="10sp"	            
	            android:textSize="20sp"
	            android:textColor="#FFFFFF" />
	    
	</LinearLayout>
	<LinearLayout
        android:id="@+id/adLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom" />
</LinearLayout>
