<?xml version="1.0" encoding="utf-8"?>

<!--  OUTERMOST LAYOUT -->
<com.carhud.app.views.MirroredLinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
 	android:background="#000000">

	<!--  MAIN DISPLAY -->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:orientation="horizontal">

		<!-- SPEEDOMETER AND RPM -->
		<LinearLayout
			android:id="@+id/speedorpmlayout"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_gravity="center"
			android:layout_weight=".0"
			android:gravity="center"
			android:orientation="vertical">

			<!--  RPM TEXT AND GAUGE-->
			<LinearLayout
				android:id="@+id/rpmtextandgaugelayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:visibility="gone">

				<!--  RPM TEXT AND LABEL -->
				<LinearLayout
					android:id="@+id/rpmtextlabellayout"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:visibility="gone">

					<!--  RPM TEXT -->
					<TextView
						android:id="@+id/rpmText"
						android:layout_width="0dp"
						android:layout_height="match_parent"
						android:layout_marginBottom="0dp"
						android:layout_marginTop="0dp"
						android:layout_weight=".65"
						android:gravity="right|center_vertical"
						android:includeFontPadding="false"
						android:lineSpacingExtra="0dp"
						android:lineSpacingMultiplier="1"
						android:maxLines="1"
						android:paddingBottom="0dp"
						android:paddingTop="0dp"
						android:textColor="#33B5E5"
						android:textSize="12sp"
						android:typeface="monospace" />

					<!--  RPM LABEL -->
					<TextView
						android:id="@+id/rpmTextLabel"
						android:layout_width="0dp"
						android:layout_height="match_parent"
						android:layout_marginBottom="0dp"
						android:layout_marginTop="0dp"
						android:layout_weight=".35"
						android:gravity="left|center_vertical"
						android:includeFontPadding="false"
						android:lineSpacingExtra="0dp"
						android:lineSpacingMultiplier="1"
						android:maxLines="1"
						android:paddingBottom="0dp"
						android:paddingTop="0dp"
						android:text="RPM"
						android:textColor="#33B5E5"
						android:textSize="12dp"
						android:typeface="monospace" />
				</LinearLayout>

				<!-- RPM GAUGE -->
				<LinearLayout
					android:id="@+id/rpmgaugelayout"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:visibility="gone">

					<!-- RPM GAUGE -->
					<com.carhud.app.views.GaugeLinearLayout
						android:id="@+id/gauge"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:background="#000000" />
				</LinearLayout>
			</LinearLayout>

		</LinearLayout>

		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight=".6"
			android:gravity="center"
			android:orientation="vertical">

			<LinearLayout
				android:id="@+id/navigationlayout"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight=".8"
				android:orientation="vertical">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="0dp"
					android:layout_weight=".8"
					android:orientation="vertical">

					<TextView
						android:id="@+id/navigationText"
						android:layout_width="match_parent"
						android:layout_height="0dp"
						android:layout_weight=".2"
						android:gravity="center"
						android:paddingBottom="15dp"
						android:text="NAvigate Here"
						android:textColor="#33B5E5"
						android:textSize="30sp" />

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="0dp"
						android:layout_weight=".7"
						android:orientation="horizontal">
						<!-- SPEEDOMETER -->
						<TextView
							android:id="@+id/speedText"
							android:layout_width="0dp"
							android:layout_height="match_parent"
							android:layout_marginBottom="0dp"
							android:layout_marginTop="0dp"
							android:layout_weight=".2"
							android:gravity="center"
							android:includeFontPadding="false"
							android:lineSpacingExtra="0dp"
							android:lineSpacingMultiplier="1"
							android:maxLines="1"
							android:paddingBottom="0dp"
							android:paddingTop="0dp"
							android:textColor="#33B5E5"
							android:textSize="12sp"
							android:typeface="monospace" />

						<ImageView
							android:id="@+id/navigationIcon"
							android:layout_width="0dp"
							android:layout_height="match_parent"
							android:layout_weight=".8"
							android:contentDescription="@string/navigationIcon"
							android:gravity="center"
							android:src="@drawable/unknown"
							android:visibility="visible" />
					</LinearLayout>

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="0dp"
						android:layout_gravity="bottom"
						android:layout_weight=".1"
						android:orientation="horizontal">

						<TextView
							android:id="@+id/estArrival"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:gravity="center"
							android:text="7:15"
							android:textColor="#33B5E5"
							android:textSize="12sp" />

						<TextView
							android:id="@+id/estDistance"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:gravity="center"
							android:text="10 miles"
							android:textColor="#33B5E5"
							android:textSize="12sp" />

					</LinearLayout>
				</LinearLayout>

			</LinearLayout>

			<LinearLayout
				android:id="@+id/mediaotherlayout"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_gravity="bottom"
				android:layout_weight=".3"
				android:gravity="bottom|left"
				android:orientation="horizontal">

				<!-- MEDIA INFO -->
				<TableLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="top">

					<!-- ARTIST -->
					<TableRow
						android:layout_width="match_parent"
						android:layout_height="wrap_content">

						<ImageView
							android:id="@+id/artistTitle"
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:contentDescription="@string/artist"
							android:gravity="right|center_vertical"
							android:scaleType="fitCenter"
							android:src="@drawable/artist" />

						<LinearLayout
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:gravity="center">

							<TextView
								android:id="@+id/artistText"
								android:layout_width="10000dp"
								android:layout_height="match_parent"
								android:ellipsize="none"
								android:gravity="left|center_vertical"
								android:marqueeRepeatLimit="-1"
								android:singleLine="true"
								android:textColor="#33B5E5"
								android:textSize="12sp" />
						</LinearLayout>
					</TableRow>

					<!-- ALBUM -->
					<TableRow
						android:layout_width="match_parent"
						android:layout_height="wrap_content">

						<ImageView
							android:id="@+id/albumTitle"
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:contentDescription="@string/album"
							android:gravity="right|center_vertical"
							android:scaleType="fitCenter"
							android:src="@drawable/album" />

						<LinearLayout
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:gravity="center">

							<TextView
								android:id="@+id/albumText"
								android:layout_width="10000dp"
								android:layout_height="match_parent"
								android:ellipsize="none"
								android:gravity="left|center_vertical"
								android:marqueeRepeatLimit="-1"
								android:singleLine="true"
								android:textColor="#33B5E5"
								android:textSize="12sp" />
						</LinearLayout>
					</TableRow>

					<!-- TRACK -->
					<TableRow
						android:layout_width="match_parent"
						android:layout_height="wrap_content">

						<ImageView
							android:id="@+id/trackTitle"
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:contentDescription="@string/track"
							android:gravity="right|center_vertical"
							android:scaleType="fitCenter"
							android:src="@drawable/track" />

						<LinearLayout
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:gravity="center">

							<TextView
								android:id="@+id/trackText"
								android:layout_width="10000dp"
								android:layout_height="match_parent"
								android:ellipsize="none"
								android:gravity="left|center_vertical"
								android:marqueeRepeatLimit="-1"
								android:singleLine="true"
								android:textColor="#33B5E5"
								android:textSize="12sp" />
						</LinearLayout>
					</TableRow>

					<!-- ALTITUDE -->
					<TableRow
						android:id="@+id/altitudelayout"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:visibility="gone">

						<ImageView
							android:id="@+id/altitudeTitle"
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:contentDescription="@string/altitudeTitle"
							android:gravity="right|center_vertical"
							android:scaleType="fitCenter"
							android:src="@drawable/altitude" />

						<TextView
							android:id="@+id/altitudeText"
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:ellipsize="none"
							android:gravity="left|center_vertical"
							android:marqueeRepeatLimit="-1"
							android:singleLine="true"
							android:textColor="#33B5E5"
							android:textSize="12sp" />
					</TableRow>

					<!-- TEMP -->
					<TableRow
						android:id="@+id/localtemplayout"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:visibility="gone">

						<ImageView
							android:id="@+id/localtempTitle"
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:contentDescription="@string/localtempTitle"
							android:gravity="right|center_vertical"
							android:scaleType="fitCenter"
							android:src="@drawable/temp" />

						<TextView
							android:id="@+id/localtempText"
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:ellipsize="none"
							android:gravity="left|center_vertical"
							android:marqueeRepeatLimit="-1"
							android:singleLine="true"
							android:textColor="#33B5E5"
							android:textSize="12sp" />
					</TableRow>

					<!-- TIME -->
					<TableRow
						android:id="@+id/timelayout"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:visibility="gone">

						<ImageView
							android:id="@+id/timeTitle"
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:contentDescription="@string/timeTitle"
							android:gravity="right|center_vertical"
							android:scaleType="fitCenter"
							android:src="@drawable/time" />

						<TextView
							android:id="@+id/timeText"
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:ellipsize="none"
							android:gravity="left|center_vertical"
							android:marqueeRepeatLimit="-1"
							android:singleLine="true"
							android:textColor="#33B5E5"
							android:textSize="12sp" />
					</TableRow>

					<!-- BATTERY -->
					<TableRow
						android:id="@+id/batterylayout"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:visibility="gone">

						<ImageView
							android:id="@+id/batteryTitle"
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:contentDescription="@string/batteryTitle"
							android:gravity="right|center_vertical"
							android:scaleType="fitCenter"
							android:src="@drawable/bat" />

						<TextView
							android:id="@+id/batteryText"
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:ellipsize="none"
							android:gravity="left|center_vertical"
							android:marqueeRepeatLimit="-1"
							android:singleLine="true"
							android:textColor="#33B5E5"
							android:textSize="25sp" />
					</TableRow>

					<!-- COOLANT -->
					<TableRow
						android:id="@+id/coolantlayout"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:visibility="gone">

						<ImageView
							android:id="@+id/coolantTitle"
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:contentDescription="@string/coolantTitle"
							android:gravity="right|center_vertical"
							android:scaleType="fitCenter"
							android:src="@drawable/temp" />

						<TextView
							android:id="@+id/coolantText"
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:ellipsize="none"
							android:gravity="left|center_vertical"
							android:marqueeRepeatLimit="-1"
							android:singleLine="true"
							android:textColor="#33B5E5"
							android:textSize="25sp" />
					</TableRow>
				</TableLayout>
			</LinearLayout>

		</LinearLayout>

		<!-- MEDIA AND OTHER INFO -->

		<!--  NAVIGATION DISPLAY -->

	</LinearLayout>

	<!-- BOTTOM BAR -->
	<LinearLayout
		android:id="@+id/statusBar"
		android:layout_width="match_parent"
		android:layout_height="30dp"
		android:background="#101010"
		android:gravity="center"
		android:orientation="horizontal">

		<!-- SENDER CONNECTION -->
		<TextView
			android:id="@+id/senderConnectionTitle"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:gravity="center"
			android:paddingRight="5sp"
			android:text="@string/senderConnectionTitle"
			android:textColor="#33B5E5"
			android:textSize="15sp"
			android:visibility="gone" />

		<ImageView
			android:id="@+id/senderConnection"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:contentDescription="@string/senderConnectionTitle"
			android:gravity="center"
			android:paddingRight="20sp"
			android:src="@drawable/notconnected"
			android:visibility="gone" />

		<!-- COBRA CONNECTION -->
		<TextView
			android:id="@+id/cobraConnectionTitle"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:gravity="center"
			android:paddingRight="5sp"
			android:text="@string/cobraConnectionTitle"
			android:textColor="#33B5E5"
			android:textSize="15sp"
			android:visibility="gone" />

		<ImageView
			android:id="@+id/cobraConnection"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:contentDescription="@string/cobraConnectionTitle"
			android:gravity="center"
			android:paddingRight="20sp"
			android:src="@drawable/notconnected"
			android:visibility="gone" />

		<!-- OBD CONNECTION -->
		<TextView
			android:id="@+id/obdConnectionTitle"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:gravity="center"
			android:paddingRight="5sp"
			android:text="@string/obdConnectionTitle"
			android:textColor="#33B5E5"
			android:textSize="15sp"
			android:visibility="gone" />

		<ImageView
			android:id="@+id/obdConnection"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:contentDescription="@string/obdConnectionTitle"
			android:gravity="center"
			android:paddingRight="20sp"
			android:src="@drawable/notconnected"
			android:visibility="gone" />
	</LinearLayout>
</com.carhud.app.views.MirroredLinearLayout>